--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CanBlockDemo</string>
+
+    <string name="app_hint">填充测试</string>
+    <string name="app_hint_long">填充测试填充测试填充测试填充测试填充测试填充</string>
 </resources>
